Bug 51887 - uxa broken after recent updates
Summary: uxa broken after recent updates
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 05:05 UTC by Christoph Reiter
Modified: 2012-07-09 09:19 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Christoph Reiter 2012-07-09 05:05:16 UTC
Hey,

some update during the last few days broke uxa. X goes in an endless crash loop during the start. sna works fine.
I can try to get a backtrace if it's just me.

- Sandy Bridge:  Intel Corporation 2nd Generation Core Processor Family
Integrated Graphics Controller (rev 09)
 - 3.4 kernel
 - xf86-video-intel: 2941a5fe15626730869a48a6 (2012-07-08 23:47:21)
Comment 1 Chris Wilson 2012-07-09 07:28:44 UTC
Oh foo. I forgot some people might try to use uxa + sna together.
Comment 2 Chris Wilson 2012-07-09 09:19:27 UTC
commit eafb454edf188e7dada1ddf886d1e46f0151968d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jul 9 08:38:08 2012 +0100

    sna: Rename conflicting symbols with uxa
    
    Reported-by: Christoph Reiter <reiter.christoph@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=51887
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.