sna: Rename conflicting symbols with uxa

Reported-by: Christoph Reiter <reiter.christoph@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=51887
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>